Rename JP and Rep

--- a/Data_ETL.ipynb
+++ b/Data_ETL.ipynb
@@ -17,7 +17,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bls_url = \"https://api.bls.gov/publicAPI/v2/timeseries/data/\""
+   ]
   },
   {
    "cell_type": "code",
